<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alexey.test_19_design.HomeActivity"
    android:background="#E1F5FE">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:padding="16dp"
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/build"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/building"
                android:scaleType="fitCenter"
                android:elevation="2dp"
                android:contentDescription="@string/building" />

            <TextView
                android:id="@+id/howto"
                android:padding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/howto"
                android:textSize="18dp"/>
            <ImageView
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tours"
                android:scaleType="fitCenter"/>
            <TextView
                android:id="@+id/howto2"
                android:padding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/howto2"
                android:textSize="18dp"/>
            <ImageView
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/expo"
                android:scaleType="fitCenter"/>
            <TextView
                android:id="@+id/howto3"
                android:padding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/howto3"
                android:textSize="18dp"/>
            <ImageView
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/piece"
                android:scaleType="fitCenter"/>

            </LinearLayout>

        </ScrollView>
</RelativeLayout>
